--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
 baseURL = "https://getinsurancesmart.com"
 languageCode = "en-us"
 title = "InsuranceSmart"
+[params]
+    description = "InsuranceSmart Website"
