add cloudinary support + link data file info to homepage components

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,6 @@
 baseURL = "https://getinsurancesmart.com"
 languageCode = "en-us"
 title = "InsuranceSmart"
+
+[params]
+    cloudinary_url = "https://res.cloudinary.com/modii/"
