set product content type to only allow creation of products

--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -13,6 +13,8 @@ sections:
 - path: content/products
   label: Products
   create: all
+  templates:
+    - product
 upload_dir: insurancesmart
 public_path: https://res.cloudinary.com/modii
 front_matter_path: ''
