--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -4,6 +4,8 @@ auto_deploy: false
 admin_path: 
 webhook_url: 
 sections:
+- path: data/quote_forms.yaml
+  hidden: true
 - path: content/testimonies
   label: Testimonies
   create: all
