--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -4,7 +4,7 @@ auto_deploy: false
 admin_path: 
 webhook_url: 
 sections:
-- path: data/quote_forms.yaml
+- path: data/forms
   hidden: true
 - path: content/testimonies
   label: Testimonies
