--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,10 @@
 baseURL = "https://getinsurancesmart.com"
 languageCode = "en-us"
 title = "InsuranceSmart"
+
+[params]
+cloudinary_url = "https://res.cloudinary.com/modii/"
+
 [[menu.shop_menu]]
 identifier = "column-3"
 name = "Column 3"
@@ -13,5 +17,15 @@ weight = 2
 identifier = "column-1"
 name = "Column 1"
 weight = 1
-[params]
-cloudinary_url = "https://res.cloudinary.com/modii/"
+
+[[menu.explore]]
+name = "About Us"
+weight = 1
+[[menu.explore]]
+name = "Testimonials"
+URL = "/testimonies/"
+weight = 2
+[[menu.explore]]
+name = "Contact"
+weight = 3
+URL = "#"
