--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -4,6 +4,9 @@ auto_deploy: false
 admin_path: 
 webhook_url: 
 sections:
+- path: content/insurancecategories
+  label: Product Categories
+  create: all
 - path: content/posts
   label: Posts
   create: all
