--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -7,15 +7,19 @@ sections:
 - path: content/insurancecategories
   label: Product Categories
   create: all
+  templates:
+    - product-category
 - path: content/posts
   label: Posts
   create: all
+  templates:
+    - article
 - path: content/testimonies
   label: Testimonies
   create: all
 - path: content
-  label: Pages
-  create: all
+  label: Homepage
+  create: none
 - path: content/products
   label: Products
   create: all
