--- a/data/menus.yaml
+++ b/data/menus.yaml
@@ -47,6 +47,15 @@ shop_menu:
       url: /products/umbrella/
       icon: '<i class="fas fa-umbrella"></i>'
       children:
+explore_menu:
+  - name: About Us
+    url: "#"
+  - name: Testimonials
+    url: "/testimonies/"
+  - name: FAQ
+    url: "#"
+  - name: Contact
+    url: "/contact/"
 footer_menu:
   menu_1:
     name: Useful Links
