add is logo to data file and update header accordingly

--- a/data/general_settings.yaml
+++ b/data/general_settings.yaml
@@ -4,7 +4,7 @@ website_settings:
   site_slogan: Affordable Insurance Coverage for Texas Residents
   site_description: InsuranceSmart is the best insurance company every! We are super
     rad.
-  logo: "/v1530419506/insurancesmart/eye-for-ebony-340137-unsplash.jpg"
+  logo: "/images/insurancesmart-default-logo.png"
   favicon: 
 contact_info:
   business_name: InsuranceSmart
