--- a/data/general_settings.yaml
+++ b/data/general_settings.yaml
@@ -5,6 +5,7 @@ website_settings:
   site_description: InsuranceSmart is the best insurance company every! We are super
     rad.
   logo: "/images/insurancesmart-default-logo.png"
+  logo_light: "/images/insurancesmart-light-logo.png"
   favicon: 
 contact_info:
   business_name: InsuranceSmart
