add quoteit form

--- a/data/quote_forms.yaml
+++ b/data/quote_forms.yaml
@@ -39,3 +39,25 @@ unitedhealthcare:
     value: "https://www.uhone.com/Quote/GetQuote.ashx?BrokerID=AA3393615&amp;ProductType=Term%20Life"
   - display: "Dental"
     value: "https://www.uhone.com/Quote/GetQuote.ashx?BrokerID=AA3393615&amp;ProductType=Dental"
+
+quoteit:
+  - display: "Individual Health Insurance"
+    value: "https://www.quotit.net/eproIFP/webPages/infoEntry/infoEntry.asp?license_no=6B3VDN"
+  - display: "Individual Health Insurance - Child Only"
+    value: "https://www.quotit.net/eproIFP/webPages/infoEntry/infoEntry.asp?covTypeID=C&insuranceTypeID=H&license_no=6B3VDN"
+  - display: "Individual Short-Term Health Insurance"
+    value: "https://www.quotit.net/eproIFP/webPages/infoEntry/infoEntry.asp?insuranceTypeID=T&license_no=6B3VDN"
+  - display: "Individual Dental Insurance"
+    value: "https://www.quotit.net/eproIFP/webPages/infoEntry/infoEntry_V2.asp?InsuranceTypeId=D&license_no=6B3VDN"
+  - display: "Medicare Supplements"
+    value: "https://www.quotit.net/eproIFP/webPages/infoentry/infoEntry.asp?covTypeID=ES&InsuranceTypeId=G&license_no=6B3VDN"
+  - display: "Accident"
+    value: "https://www.quotit.net/eproIFP/webPages/infoEntry/infoEntry.asp?insuranceTypeID=N&license_no=6B3VDN"
+  - display: "Critical Illness"
+    value: "https://www.quotit.net/eproIFP/webPages/infoEntry/infoEntry.asp?insuranceTypeID=I&license_no=6B3VDN"
+  - display: "Cancer"
+    value: "https://www.quotit.net/eproIFP/webPages/infoEntry/infoEntry.asp?insuranceTypeID=X&license_no=6B3VDN"
+  - display: "Term Life"
+    value: "https://www.quotit.net/eproIFP/webPages/infoEntry/infoEntry.asp?insuranceTypeID=L&license_no=6B3VDN"
+  - display: "WBE Health On Exchange"
+    value: "https://www.quotit.net/eproIFP/webpages/infoEntry/InfoEntryZip.asp?InsuranceTypeId=5&license_no=6B3VDN"
