--- a/data/quote_forms.yaml
+++ b/data/quote_forms.yaml
@@ -66,15 +66,15 @@ quoteit:
 
 contact_form:
   insurance_choices:
-  - name: auto
-    label: Auto / Vehicle Insurance
-  - name: home
-    label: Home / Property Insurance
+  # - name: auto
+  #   label: Auto / Vehicle Insurance
+  # - name: home
+  #   label: Home / Property Insurance
   - name: life
     label: Life Insurance
   - name: health
     label: Health Insurance
   - name: medicare
     label: Medicare Supplement Insurance
-  - name: umbrella
-    label: Umbrella Insurance
+  # - name: umbrella
+  #   label: Umbrella Insurance
