--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "url": "https://github.com/ModiiMedia/InsuranceSmart/issues"
   },
   "homepage": "https://github.com/ModiiMedia/InsuranceSmart#readme",
+  "dependencies": {
+    "tailwindcss": "^3.1.8"
+  },
   "devDependencies": {
     "concurrently": "^7.3.0",
     "hugo-bin": "^0.89.0",
     "prettier": "^2.7.1",
-    "prettier-plugin-go-template": "^0.0.13",
-    "tailwindcss": "^3.1.8"
+    "prettier-plugin-go-template": "^0.0.13"
   }
 }
