--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "css": "tailwindcss -i assets/css/tailwind.css -o assets/css/tailwind.build.css",
     "css:watch": "tailwindcss -i assets/css/tailwind.css -o assets/css/tailwind.build.css --watch",
     "hugo": "hugo --minify",
-    "hugo:watch": "hugo server",
+    "hugo:watch": "hugo server -D",
     "dev": "concurrently \"npm run css:watch\" \"npm run hugo:watch\"",
     "build": "npm run css && npm run hugo",
     "forestry-preview": "npm run css && hugo server -D -E -F --port 8080 --bind 0.0.0.0 --renderToDisk -d public"
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/ModiiMedia/InsuranceSmart#readme",
   "dependencies": {
-    "tailwindcss": "^3.1.8",
-    "hugo-bin": "^0.89.0"
+    "hugo-bin": "^0.92.3",
+    "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
-    "concurrently": "^7.3.0",
+    "concurrently": "^7.5.0",
     "prettier": "^2.7.1",
     "prettier-plugin-go-template": "^0.0.13"
   }
