--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
 [build.environment]
-NODE_VERSION = "16.16.0"
-NPM_VERSION = "8.15.1"
+NODE_VERSION = "18.17.1"
+PNPM_VERSION = "8.7.6"
 HUGO_VERSION = "0.101.0"
