--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "css": "tailwindcss -i assets/css/tailwind.css -o assets/css/tailwind.build.css",
         "css:watch": "tailwindcss -i assets/css/tailwind.css -o assets/css/tailwind.build.css --watch",
         "hugo": "hugo --minify",
-        "hugo:watch": "hugo server -D",
+        "hugo:watch": "hugo server -D --disableFastRender",
         "dev": "concurrently \"pnpm run css:watch\" \"pnpm run hugo:watch\"",
         "build": "pnpm run css && pnpm run hugo",
         "forestry-preview": "pnpm run css && hugo server -D -E -F --port 8080 --bind 0.0.0.0 --renderToDisk -d public"
@@ -25,11 +25,12 @@
     "homepage": "https://github.com/ModiiMedia/InsuranceSmart#readme",
     "dependencies": {
         "hugo-bin": "^0.92.3",
-        "tailwindcss": "^3.2.4"
+        "tailwindcss": "^3.4.13"
     },
     "devDependencies": {
-        "concurrently": "^8.2.1",
-        "prettier": "^3.0.3",
+        "concurrently": "^8.2.2",
+        "prettier": "^3.3.3",
         "prettier-plugin-go-template": "^0.0.15"
-    }
+    },
+    "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c"
 }
